# docs/swagger.yaml
@@ -620,70 +620,15 @@ paths:
     post:
       consumes:
       - multipart/form-data
+      - application/json
       description: Create a new cat with the provided details
       parameters:
-      - description: Name
-        in: formData
-        name: name
+      - description: Cat object
+        in: body
+        name: cat
         required: true
-        type: string
-      - description: Birth Date
-        in: formData
-        name: BirthDate
-        required: true
-        type: string
-      - description: Sexe
-        in: formData
-        name: sexe
-        required: true
-        type: string
-      - description: Last Vaccine Date
-        in: formData
-        name: LastVaccine
-        type: string
-      - description: Last Vaccine Name
-        in: formData
-        name: LastVaccineName
-        type: string
-      - description: Color
-        in: formData
-        name: Color
-        required: true
-        type: string
-      - description: Behavior
-        in: formData
-        name: Behavior
-        required: true
-        type: string
-      - description: Sterilized
-        in: formData
-        name: Sterilized
-        required: true
-        type: string
-      - description: Race
-        in: formData
-        name: Race
-        required: true
-        type: string
-      - description: Description
-        in: formData
-        name: Description
-        type: string
-      - description: Reserved
-        in: formData
-        name: Reserved
-        required: true
-        type: string
-      - description: Annonce ID
-        in: formData
-        name: AnnonceID
-        required: true
-        type: string
-      - description: User ID
-        in: formData
-        name: UserID
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/models.Cats'
       - description: Image
         in: formData
         name: uploaded_file
@@ -847,9 +792,9 @@ paths:
         in: formData
         name: Sterilized
         type: string
-      - description: Race
+      - description: RaceID
         in: formData
-        name: Race
+        name: RaceID
         type: string
       - description: Description
         in: formData
